fix text area not fitting on the mobile screen

--- a/src/components/NewComment/NewComment.module.css
+++ b/src/components/NewComment/NewComment.module.css
@@ -30,4 +30,8 @@ textarea:focus {
     justify-content: center;
     margin-top: 20px;
   }
+
+  textarea {
+    width: 80%;
+  }
 }
